# ruddy

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/: queens.rs  simple.rs
src/: apply.rs  bdd.rs  bdd_node.rs  boolean_operators.rs  conversion.rs  iterators.rs  lib.rs  nested_apply.rs  node_id.rs  node_table.rs  shared.rs  task_cache.rs  variable_id.rs
src/shared/: apply.rs  bdd.rs  manager.rs  mod.rs  nested_apply.rs
src/split/: apply.rs  bdd.rs  mod.rs  nested_apply.rs  serialization.rs
