[package]
name = "ruddy"
version = "0.1.0"
edition = "2021"

[lib]
name = "ruddy"
path = "src/lib.rs"

[lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
char_lit_as_u8 = "warn"
fn_to_numeric_cast = "warn"
fn_to_numeric_cast_with_truncation = "warn"
ptr_as_ptr = "warn"
unnecessary_cast = "warn"

[dependencies]
replace_with = "0.1.7"