[package]
name = "ruddy"
version = "0.0.1"
edition = "2024"
authors = ["Lukáš Urban <492717@mail.muni.cz>", "Samuel Pastva <sam.pastva@gmail.com>"]
edition = "2024"
description = "Minimalistic library for working with binary decision diagrams."
homepage = "https://github.com/sybila/ruddy"
repository = "https://github.com/sybila/ruddy"
readme = "README.md"
license = "MIT"
rust-version = "1.88"


[lib]
name = "ruddy"
path = "src/lib.rs"

[lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
char_lit_as_u8 = "warn"
fn_to_numeric_cast = "warn"
fn_to_numeric_cast_with_truncation = "warn"
ptr_as_ptr = "warn"
unnecessary_cast = "warn"

[dependencies]
replace_with = "0.1.7"
rustc-hash = "2.1.1"